Resolves #662. Fixes stretching issue on aimmo landing page

--- a/portal/static/portal/sass/partials/_images-backgrounds.scss
+++ b/portal/static/portal/sass/partials/_images-backgrounds.scss
@@ -5,6 +5,12 @@ img {
   max-width: 100%;
 }
 
+.flex-images {
+  img {
+    align-self: center;
+  }
+}
+
 .homepage-info img {
   @include _padding(0px, 0px, 15px, 0px);
 }
